--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^7.2.4",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
