--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
