--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
     "@reduxjs/toolkit": "^1.6.1",
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
