--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,5 @@ dist-ssr
 .idea/modules.xml
 .idea/vcs.xml
 .idea/codeStyles/codeStyleConfig.xml
-pyparser/poetry.lock
+pyparser
 .python-version
-pyparser/pyproject.toml
